--- a/index.html
+++ b/index.html
@@ -465,8 +465,8 @@
         /* Lampka */
         .lamp {
             position: absolute;
-            top: 8%;
-            left: 15%;
+            top: 12%;
+            left: 12%;
             width: 80px;
             height: 120px;
             z-index: 4;
@@ -477,40 +477,41 @@
             top: 0;
             left: 50%;
             transform: translateX(-50%);
-            width: 2px;
-            height: 30px;
-            background: #333;
+            width: 3px;
+            height: 35px;
+            background: #2d2d2d;
         }
 
         .lamp-shade {
             position: absolute;
-            top: 30px;
+            top: 35px;
             left: 50%;
             transform: translateX(-50%);
-            width: 60px;
-            height: 40px;
+            width: 65px;
+            height: 45px;
             background: linear-gradient(to bottom, #ffd700 0%, #ffed4e 100%);
-            border-radius: 0 0 20px 20px;
-            border: 3px solid #d4af37;
+            border-radius: 0 0 22px 22px;
+            border: 4px solid #d4af37;
             transition: all 2s ease;
+            box-shadow: 0 10px 30px rgba(255,215,0,0.5);
         }
 
         .lamp-shade.off {
-            background: linear-gradient(to bottom, #666 0%, #555 100%);
-            border-color: #444;
+            background: linear-gradient(to bottom, #888 0%, #666 100%);
+            border-color: #555;
             box-shadow: none;
         }
 
         .lamp-light {
             position: absolute;
-            top: 70px;
+            top: 80px;
             left: 50%;
             transform: translateX(-50%);
-            width: 120px;
-            height: 100px;
-            background: radial-gradient(ellipse at top, rgba(255,235,59,0.3) 0%, transparent 70%);
+            width: 140px;
+            height: 120px;
+            background: radial-gradient(ellipse at top, rgba(255,235,59,0.4) 0%, rgba(255,235,59,0.2) 40%, transparent 70%);
             pointer-events: none;
-            filter: blur(15px);
+            filter: blur(20px);
             opacity: 1;
             transition: opacity 2s ease;
         }
@@ -689,6 +690,7 @@
             #actionButtons { max-width: 100%; gap: 8px; bottom: 10px; padding: 0 10px; width: calc(100% - 20px); }
             #zdkButton { font-size: 26px; padding: 20px 40px; }
             .window-light { width: 350px; height: 350px; }
+            .lamp { left: 10%; top: 10%; transform: scale(0.7); }
             #achievementsPanel { width: 100%; right: -100%; }
             .install-hint { font-size: 10px; max-width: 250px; }
             #uiContainer { top: 10px; left: 10px; gap: 8px; }
@@ -721,6 +723,13 @@
 
         <!-- Światło z okna -->
         <div class="window-light" id="windowLight"></div>
+
+        <!-- Lampka -->
+        <div class="lamp">
+            <div class="lamp-cord"></div>
+            <div class="lamp-shade" id="lampShade"></div>
+            <div class="lamp-light" id="lampLight"></div>
+        </div>
     </div>
 </div>
 
@@ -742,10 +751,10 @@
 
 <!-- Przyciski akcji -->
 <div id="actionButtons">
-    <button class="action-btn withdraw" id="withdrawBtn">💰 Wypłać premię</button>
+    <button class="action-btn withdraw" id="withdrawBtn">💰 Wypłać</button>
     <button class="action-btn" id="shareBtn">📤 Udostępnij</button>
     <button class="action-btn achievements" id="achievementsBtn">🏆 Osiągnięcia</button>
-    <button class="action-btn prestige" id="prestigeBtn" disabled>⭐ Prestige (10000)</button>
+    <button class="action-btn prestige" id="prestigeBtn" disabled>⭐ Reset (10000)</button>
 </div>
 
 <!-- Przycisk ZDK -->
@@ -789,6 +798,8 @@
     const windowEl = document.getElementById('window');
     const celestial = document.getElementById('celestial');
     const windowLight = document.getElementById('windowLight');
+    const lampShade = document.getElementById('lampShade');
+    const lampLight = document.getElementById('lampLight');
     const withdrawBtn = document.getElementById('withdrawBtn');
     const shareBtn = document.getElementById('shareBtn');
     const achievementsBtn = document.getElementById('achievementsBtn');
@@ -982,9 +993,9 @@
         const canPrestige = clickCount >= 10000;
         prestigeBtn.disabled = !canPrestige;
         if (canPrestige) {
-            prestigeBtn.textContent = `⭐ Prestige (+${(getPrestigeMultiplier() * 0.1 * 100 + 10).toFixed(0)}% bonusu)`;
+            prestigeBtn.textContent = `⭐ Reset (+${(getPrestigeMultiplier() * 0.1 * 100 + 10).toFixed(0)}%)`;
         } else {
-            prestigeBtn.textContent = `⭐ Prestige (${clickCount}/10000)`;
+            prestigeBtn.textContent = `⭐ Reset (${clickCount}/10000)`;
         }
     }
 
@@ -1075,6 +1086,16 @@
         document.querySelector('.wall').style.background = time.wall;
         document.querySelector('.floor').style.background = time.floor;
         windowLight.style.background = `radial-gradient(ellipse at top, ${time.lightColor} ${time.lightIntensity}, transparent 70%)`;
+
+        // Włącz lampkę w nocy (indeksy 5 i 6 = wieczór i noc)
+        if (currentTimeIndex >= 5) {
+            lampShade.classList.remove('off');
+            lampLight.classList.remove('off');
+            lampShade.style.boxShadow = '0 10px 30px rgba(255,215,0,0.4)';
+        } else {
+            lampShade.classList.add('off');
+            lampLight.classList.add('off');
+        }
 
         // Dodaj do widzianych pór dnia
         seenTimes.add(currentTimeIndex);
