--- a/index.html
+++ b/index.html
@@ -367,6 +367,18 @@
             cursor: not-allowed;
         }
 
+        .action-btn.help {
+            background: linear-gradient(135deg, #10b981 0%, #059669 100%);
+            border-color: #047857;
+            box-shadow: 0 4px 15px rgba(16,185,129,0.4);
+            grid-column: span 2;
+            font-size: 13px;
+        }
+
+        .action-btn.help:hover {
+            box-shadow: 0 6px 20px rgba(16,185,129,0.6);
+        }
+
         /* Panel osiągnięć */
         #achievementsPanel {
             position: fixed;
@@ -687,6 +699,7 @@
             .window { width: 180px; height: 160px; right: 5%; top: 12%; }
             .celestial { width: 35px; height: 35px; }
             .action-btn { font-size: 13px; padding: 12px 12px; }
+            .action-btn.help { font-size: 12px; padding: 10px 12px; }
             #actionButtons { max-width: 100%; gap: 8px; bottom: 10px; padding: 0 10px; width: calc(100% - 20px); }
             #zdkButton { font-size: 26px; padding: 20px 40px; }
             .window-light { width: 350px; height: 350px; }
@@ -804,6 +817,7 @@
     const shareBtn = document.getElementById('shareBtn');
     const achievementsBtn = document.getElementById('achievementsBtn');
     const prestigeBtn = document.getElementById('prestigeBtn');
+    const helpBtn = document.getElementById('helpBtn');
     const achievementsPanel = document.getElementById('achievementsPanel');
     const closeAchievements = document.getElementById('closeAchievements');
     const achievementsList = document.getElementById('achievementsList');
@@ -993,9 +1007,9 @@
         const canPrestige = clickCount >= 10000;
         prestigeBtn.disabled = !canPrestige;
         if (canPrestige) {
-            prestigeBtn.textContent = `⭐ Reset (+${(getPrestigeMultiplier() * 0.1 * 100 + 10).toFixed(0)}%)`;
+            prestigeBtn.textContent = `⭐ (+${(getPrestigeMultiplier() * 0.1 * 100 + 10).toFixed(0)}%)`;
         } else {
-            prestigeBtn.textContent = `⭐ Reset (${clickCount}/10000)`;
+            prestigeBtn.textContent = `⭐ (${clickCount}/10000)`;
         }
     }
 
@@ -1296,6 +1310,50 @@
 
     closeAchievements.addEventListener('click', () => {
         achievementsPanel.classList.remove('open');
+    });
+
+    // Instrukcja
+    helpBtn.addEventListener('click', () => {
+        modalTitle.textContent = '📖 Jak grać?';
+        modalText.innerHTML = `
+                <div style="text-align: left; line-height: 1.8;">
+                    <strong style="color: #00ff88; font-size: 20px;">🎯 Cel gry:</strong><br>
+                    Klikaj przycisk ZDK i zdobywaj premie!<br><br>
+
+                    <strong style="color: #ffd700; font-size: 18px;">💰 System premii:</strong><br>
+                    • Co 100 kliknięć = 2.09 zł premii<br>
+                    • Premia rośnie z każdym Prestige!<br>
+                    • Wypłata = zawsze 0 zł (podatki!)<br><br>
+
+                    <strong style="color: #667eea; font-size: 18px;">⭐ Prestige (10,000 kliknięć):</strong><br>
+                    • Reset: Kliknięcia → 0, Premia → 0<br>
+                    • Zachowujesz: Osiągnięcia, poziom Prestige<br>
+                    • Bonus: <span style="color: #00ff88;">+10% premii NA ZAWSZE</span><br>
+                    • Przykład: Prestige 5 = 150% premii!<br><br>
+
+                    <strong style="color: #f093fb; font-size: 18px;">🏆 Osiągnięcia (17):</strong><br>
+                    • Odblokowuj za kliknięcia, premie, Prestige<br>
+                    • Zobacz wszystkie w panelu Osiągnięć<br><br>
+
+                    <strong style="color: #ff6b6b; font-size: 18px;">⚡ Trudność:</strong><br>
+                    • Co 100 kliknięć przycisk = szybszy<br>
+                    • Im wyższy poziom, tym trudniej!<br><br>
+
+                    <strong style="color: #87ceeb; font-size: 18px;">🌅 Dzień i noc:</strong><br>
+                    • Co 20 kliknięć zmienia się pora dnia<br>
+                    • 7 pór: świt → ranek → południe → popołudnie → zmierzch → wieczór → noc<br>
+                    • Lampa zapala się wieczorem i w nocy!<br><br>
+
+                    <strong style="color: #10b981; font-size: 18px;">💡 Strategia:</strong><br>
+                    • Nie wypłacaj premii za wcześnie<br>
+                    • Zbieraj do pierwszego Prestige (10k)<br>
+                    • Każdy Prestige = łatwiejsze zbieranie<br>
+                    • Poluj na wszystkie osiągnięcia!<br><br>
+
+                    <span style="opacity: 0.7; font-size: 14px;">Gra zapisuje się automatycznie co 5 sekund.</span>
+                </div>
+            `;
+        modal.classList.add('show');
     });
 
     // Zamknij modal
