Move UI stats to bottom, remove loading text, update error code
- Relocate click counter, bonus, and prestige UI boxes to bottom of screen
- Remove 'Connecting to statistical data server' text from loading modal
- Change Patyki error code from 'STATS_TEMP_UNAVAILABLE_001' to 'richman is unavailable'

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <span class="menu-item-badge" id="mailBadge">1</span>
         </button>
         <button class="menu-item" id="statsBtn">📊 Patyki</button>
+        <button class="menu-item" id="paskiBtn">📈 Paski</button>
         <button class="menu-item" id="withdrawBtn">💰 Wypłać premię</button>
         <button class="menu-item" id="shareBtn">📤 Udostępnij wynik</button>
         <button class="menu-item" id="achievementsBtn">🏆 Osiągnięcia</button>
@@ -158,7 +159,7 @@
     <div class="achievement-notif-icon" id="notifAchievementIcon"></div>
 </div>
 
-<!-- Loading Modal -->
+<!-- Loading Modal -->g
 <div id="loadingModal" class="loading-modal">
     <div class="loading-content">
         <div class="loading-spinner"></div>
