--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta property="og:title" content="ZDK - Klikam więc jestem">
     <meta property="og:description" content="🎮 Symulator polskiego pracownika. Klikaj, zdobywaj premie, awansuj... i odkryj prawdę o podatkach! 💰⚡">
     <meta property="og:image" content="https://klikam-wiec-jestem.netlify.app/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="ZDK - Klikam więc jestem - gra clicker">
+    <meta property="og:site_name" content="ZDK">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -159,7 +163,7 @@
     <div class="achievement-notif-icon" id="notifAchievementIcon"></div>
 </div>
 
-<!-- Loading Modal -->g
+<!-- Loading Modal -->
 <div id="loadingModal" class="loading-modal">
     <div class="loading-content">
         <div class="loading-spinner"></div>
