--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
     </div>
 </div>
 
+<!-- Music Toggle Button - Bottom Right -->
+<button class="music-toggle-btn" id="musicToggleBtn">
+    <span class="music-icon" id="musicIcon">🔊</span>
+</button>
+
 <!-- Hamburger Menu -->
 <button class="hamburger-btn" id="hamburgerBtn">
     <div class="hamburger-icon">
@@ -170,6 +175,11 @@
         <h2>Czekaj, trwa przetwarzanie żądania...</h2>
     </div>
 </div>
+
+<!-- Background Music -->
+<audio id="bgMusic" loop>
+    <source src="Pay for Performance.mp3" type="audio/mpeg">
+</audio>
 
 <script src="game.js"></script>
 </body>
