--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%23ff6b6b'/%3E%3Ctext x='50' y='70' font-size='50' text-anchor='middle' fill='white' font-family='Arial' font-weight='bold'%3EZDK%3C/text%3E%3C/svg%3E">
     <link rel="apple-touch-icon" href="icon-192.png">
 
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="manifest.json">
+
     <title>ZDK - Klikam więc jestem</title>
     <link rel="stylesheet" href="style.css">
 
@@ -251,5 +254,34 @@
 
 <script src="supabase-config.js"></script>
 <script src="game.js"></script>
+
+<!-- PWA Service Worker Registration -->
+<script>
+    if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+            navigator.serviceWorker.register('/sw.js')
+                .then((registration) => {
+                    console.log('✅ Service Worker registered:', registration.scope);
+                })
+                .catch((error) => {
+                    console.log('❌ Service Worker registration failed:', error);
+                });
+        });
+    }
+
+    // Install prompt handler
+    let deferredPrompt;
+    window.addEventListener('beforeinstallprompt', (e) => {
+        e.preventDefault();
+        deferredPrompt = e;
+        console.log('💾 PWA install prompt ready');
+    });
+
+    // Handle app installed
+    window.addEventListener('appinstalled', () => {
+        console.log('🎉 PWA installed successfully!');
+        deferredPrompt = null;
+    });
+</script>
 </body>
 </html>
